--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <link rel="stylesheet" href="css/styles.css">
+    <script async src="https://arc.io/widget.min.js#yKqGdZDi"></script>
     <link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css">
   </head>
   <body>
